<resources>
    <string name="app_name">Debus</string>
    <string name="pilgub_desc">Gunakan Hak Pilih Anda Untuk Banten Lebih Baik</string>
    <string name="paslon_desc">Pasangan Cagub dan Cawagub Pilkada Banten 2017</string>
    <string name="wh_andika_desc">No. 1 WH &amp; Andika</string>
    <string name="rano_embay_desc">No. 2 Rano &amp; Embay</string>
    <string name="title_pager_news">News</string>
    <string name="title_pager_kandidat">Kandidat</string>
    <string name="title_pager_pilkada">Pilkada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Coba Lagi</string>
    <string name="dialog_no_connection">Cannot Load News, Please check yout internet connection.</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="pilarbanten">www.pilarbanten.com</string>
    <string name="campaign">Kampanye</string>
    <string name="title_activity_gallery">Buat Meme</string>
    <string name="title_meme">Meme</string>
    <string name="title_activity_test">test</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="select_image">Pilih gambar..</string>
    <string name="title_activity_profil_kandidat">ProfilKandidatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="conn_problem">Maaf.. koneksi gagal</string>
    <string name="nama">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="ttl">Tempat, Tanggal Lahir</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="title_activity_parts_pilkada">PartsPilkadaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_list_daerah">Daftar Wilayah</string>
    <string name="title_sumber">Sumber : pemiluapi.org</string>
    <string name="tahapan_pilkada">Tahapan Pilkada</string>
    <string name="partisipasi_pilkada">Partisipasi Pilkada</string>
    <string name="share_fb">Share berita di Facebook</string>
    <string name="share_twitter">Share berita di Twitter</string>
    <string name="share_whatsapp">Share berita di Whatsapp</string>
    <string name="share_line">Share berita di Line</string>
    <string name="share_manual">Share berita</string>
</resources>
