<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bea.fadly.com.bantenelectionapp.NewsActivity"
    tools:showIn="@layout/activity_news">

    <TextView
        android:visibility="gone"
        android:id="@+id/text_portal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilarbanten"
        android:textSize="@dimen/songs_count"
        android:paddingBottom="@dimen/album_title_padding"
        android:textColor="@color/dot_dark_screen1"/>

    <TextView
        android:id="@+id/text_title_news"
        android:layout_below="@+id/text_portal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/cardview_dark_background"
        android:paddingBottom="@dimen/album_title_padding"
        android:textSize="@dimen/album_title"/>

    <TextView
        android:id="@+id/text_author_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title_news"
        android:textSize="@dimen/songs_count"
        android:paddingBottom="@dimen/news_pubdate_padding"
        android:textColor="@color/dot_dark_screen1"/>

    <TextView
        android:id="@+id/text_pubdate_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e0e0e0"
        android:layout_below="@+id/text_author_news"
        android:paddingBottom="@dimen/album_title_padding"
        android:textSize="@dimen/songs_count"/>

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text_pubdate_news">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_share_fb"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_fb"
            app:civ_border_width="1dp"
            android:contentDescription="@string/share_fb"
            app:civ_border_color="@color/cardview_light_background"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_share_twitter"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_twitter"
            app:civ_border_width="1dp"
            android:contentDescription="@string/share_twitter"
            app:civ_border_color="@color/cardview_light_background"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_share_whatsapp"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_wa"
            app:civ_border_width="1dp"
            android:contentDescription="@string/share_whatsapp"
            app:civ_border_color="@color/cardview_light_background"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_share_line"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:src="@drawable/s_line"
            app:civ_border_width="1dp"
            android:contentDescription="@string/share_line"
            app:civ_border_color="@color/cardview_light_background"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_share_"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_share_white_24dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/cardview_light_background"
            android:contentDescription="@string/share_manual"
            app:civ_fill_color="@color/com_adobe_image_color_blue_dark"/>



    </LinearLayout>

        <LinearLayout
            android:layout_below="@id/layout_share"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/album_title"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_content_news"
                android:textSize="@dimen/text_size_content_news"
                android:layout_width="match_parent"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

</RelativeLayout>
